# sharun

./: .gitignore  Cargo.toml  README.md  lib4bin
.github/: create_aio_sharun.sh
.github/workflows/: ci.yml
src/: main.rs
