[package]
name = "sharun"
version = "0.1.7"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/sharun"
description = "Run dynamically linked ELF binaries everywhere"
edition = "2021"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "symbols"
debug  = false
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 0

[dependencies]
which = "7.0.0"
walkdir = "2.5.0"
userland-execve = "0.2.0"
dotenv = { git = "https://github.com/VHSgunzo/dotenv.git" }
