[package]
name = "sharun"
version = "0.4.4"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/sharun"
description = "Run dynamically linked ELF binaries everywhere"
edition = "2021"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "symbols"
debug  = false
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 0

[dependencies]
which = "7.0.2"
goblin = "0.8.2"
walkdir = "2.5.0"
flate2 = "1.0.35"
userland-execve = "0.2.0"
include_file_compress = "0.1.3"
nix = { version = "0.29.0", features = [ "fs" ] }
dotenv = { git = "https://github.com/VHSgunzo/dotenv.git" }
