cargo-features = ["panic-immediate-abort"]

[package]
name = "sharun"
version = "0.7.7"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/sharun"
description = "Run dynamically linked ELF binaries everywhere"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
debug  = false
codegen-units = 1
panic = "immediate-abort"

[profile.dev]
opt-level = 0

[features]
default = [
    "elf32",
    "setenv",
    "lib4bin",
    "pyinstaller"
]
elf32 = []
setenv = []
lib4bin = []
pyinstaller = []

[dependencies]
cfg-if = "1.0.0"
goblin = "0.8.2"
walkdir = "2.5.0"
flate2 = "1.1.5"
userland-execve = "0.2.0"
include_file_compress = "0.1.3"
nix = { version = "0.30.1", features = [ "fs" ] }
dotenv = { git = "https://github.com/VHSgunzo/dotenv.git" }
